--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,37 @@
 .heroSection {
   height: 400px; /* 規劃用 */
   background-color: var(--color-gray-white);
+  background-image: url('assets/big-cloud.svg'), url('assets/small-cloud.svg');
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 50px top 50px, left 150px top 100px;
+  transform: scaleX(1), scaleX(-1);
+  position: relative;
+  .main{
+    width: 1296px;
+    height: 300px;
+    padding: 0 110px;
+    border: 1px dashed black;
+    justify-content:center;
+    align-items: center;
+  }
+  .slogan{
+    width: 300px;
+    height: 100px;
+    margin: 44px 72px 44px 0;
+  }
 }
+.big-cloud1 {
+  background-color: var(--color-gray-white);
+  background-image: url('assets/big-cloud.svg');
+  background-size: cover;
+  transform: scaleX(-1);
+  position: absolute;
+  width: 150px;
+  height: 100px;
+  top: 50px;
+  right: 50px;
+}
+
 .searchSection {
   height: 300px; /* 規劃用 */
   background-color: var(--color-primary-200);
@@ -55,3 +85,4 @@
   height: 400px; /* 規劃用 */
   background-color: var(--color-gray-400);
 }
+
