--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ body{
   line-height: var(--trip-line-height-tight); 
   font-size: var(--trip-font-text-l-size); 
   letter-spacing: var(--trip-letter-spacing-10);
+  color: var(--trip-color-gray-800);
 }
 
 /* Navber */
@@ -62,18 +63,74 @@ body{
   height: 400px; /* 規劃用 */
   background-color: var();
 }
+/* 熱門開團 start*/
 .hotTripSection {
   height: 972px;
-  background: url('assets/mapBg.png') no-repeat center/cover;
+  background: var(--trip-color-primary-100) url('assets/mapBg.png') no-repeat center center;
+  padding-top: 84px;
+  h2{
+    text-align: center;
+  }
+  .col-6{
+    background: #fff;
+  }
 }
+  @media (max-width: 1024px) {
+    .hotTripSection {
+      height: auto;
+      background: var(--trip-color-primary-100) url('assets/mapBg.png') no-repeat center center;
+      padding-bottom: 40px;
+      padding-top: 100px;
+    }
+  }
+.tripRow{
+  border-radius: 16px;
+  padding: 40px 28px;
+  .h4{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow:hidden;
+  }
+}
+.tripImg{
+  width: 100px;
+  height: 100px;
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+}
+.lastSeat{
+  background-color: #FFF2E0;
+  color: #E78F0C;
+  border-radius: 4px;
+  font-weight: 500;
+}
+.more-btn{
+  margin-top: 48px;
+  margin-bottom: 100px;
+}
+/* 熱門開團 end*/
+
+/* 旅遊心得 start*/
 .thoughtsSection {
-  height: 400px; /* 規劃用 */
-  background-color: var();
+  height: auto;
+  background-color: var(--trip-color-gray-100);
+  padding: 100px 0;
 }
+/* 旅遊心得 end*/
+
 .reviewsSection {
   height: 400px; /* 規劃用 */
   background-color: var(--trip-color-gray-400);
 }
+
+
+
+
+
 
 
 
@@ -118,5 +175,13 @@ body{
   100% {
     transform: translateX(0);
     transform: translateY(0);
+  }
+}
+@media (max-width: 768px) {
+  .bear{
+    position: fixed;
+    z-index: 999;
+    top: 75%;
+    left: 10px;
   }
 }
