--- a/src/assets/css/hotTripSection.css
+++ b/src/assets/css/hotTripSection.css
@@ -22,6 +22,7 @@
   border-radius: 16px;
   padding: 40px 28px;
   .h4{
+    max-width: 95%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow:hidden;
