--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,17 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap');
-body{
-  font-family: var(--trip-font-family); 
-  font-weight: var(--trip-font-weight-bold); 
-  line-height: var(--trip-line-height-tight); 
-  font-size: var(--trip-font-text-l-size); 
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap");
+body {
+  font-family: var(--trip-font-family);
+  font-weight: var(--trip-font-weight-bold);
+  line-height: var(--trip-line-height-tight);
+  font-size: var(--trip-font-text-l-size);
   letter-spacing: var(--trip-letter-spacing-10);
   color: var(--trip-color-gray-800);
 }
 
-/* Navber */
-.navbar {
-  background-color: var(--trip-color-status-success);
-}
 /* Footer */
 .footer {
   height: 400px; /* 規劃用 */
@@ -20,24 +16,27 @@ body{
 }
 
 /* Home */
-.main{
+.main {
   max-width: 1296px;
 }
 .heroSection {
   /* height: 400px; */
   background-color: var(--trip-color-white);
-  background-image: url('./../images/big-cloud.svg'), url('./../images/small-cloud.svg');
+  background-image:
+    url("./../images/big-cloud.svg"), url("./../images/small-cloud.svg");
   background-repeat: no-repeat, no-repeat;
-  background-position: right 50px top 50px, left 150px top 100px;
+  background-position:
+    right 50px top 50px,
+    left 150px top 100px;
   transform: scaleX(1), scaleX(-1);
   position: relative;
-  .main{
+  .main {
     height: 300px;
     padding: 0 110px;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
   }
-  .slogan{
+  .slogan {
     width: 577px;
     height: 100px;
     margin: 44px 72px 44px 0;
@@ -45,7 +44,7 @@ body{
 }
 .big-cloud1 {
   background-color: var(--trip-color-white);
-  background-image: url('./../images/big-cloud.svg');
+  background-image: url("./../images/big-cloud.svg");
   background-size: cover;
   transform: scaleX(-1);
   position: absolute;
@@ -64,7 +63,6 @@ body{
   background-color: var();
 }
 
-
 /* 旅遊心得 start*/
 .thoughtsSection {
   height: auto;
@@ -78,39 +76,14 @@ body{
   background-color: var(--trip-color-gray-400);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Balloon-Bear */
-.bear{
+.bear {
   position: fixed;
   z-index: 999;
   top: 45%;
   left: 10px;
   animation: bearMove 3s infinite alternate;
-  img{
+  img {
     width: 100px;
   }
 }
@@ -129,7 +102,7 @@ body{
   }
 }
 @media (max-width: 768px) {
-  .bear{
+  .bear {
     position: fixed;
     z-index: 999;
     top: 75%;
