--- a/src/assets/css/searchSection.css
+++ b/src/assets/css/searchSection.css
@@ -2,49 +2,90 @@
     background-color: var(--trip-color-primary-200);
     padding-block: 120px;
 
-    .search-container {
+    @media (max-width: 1024px) {
+        padding: 40px 12px;
+    }
+
+    .container {
         background-color: #FFFFFF;
         padding: 80px 120px 40px 120px;
         border-radius: 40px;
-        max-width: 1296px;
 
-        .searchBar {
-            height: 64px;
-            border: 1px solid var(--trip-color-gray-200);
-            border-radius: 100px;
-            overflow: hidden;
-            margin-top: 40px;
-
-            .selector-box {
-                width: 200px;
-
-                .form-select:focus {
-                    box-shadow: none !important;
-                }
-            }
-
-            input:focus-visible {
-                outline: none;
-            }
-
-            .searchBtn-box {
-                width: 64px;
-                height: 64px;
-
-                .searchBtn:active {
-                    transform: translate(2px, 2px)
-                }
-            }
-        }
-
-        .image-box {
-            max-height: 280px;
-            margin-top: 120px;
+        @media (max-width: 1024px) {
+            padding: 36px 12px 28px 12px;
+            border-radius: 32px;
         }
     }
 
-}
+    .searchBar {
+        height: 64px;
+        outline: 1px solid var(--trip-color-gray-200);
+        border-radius: 100px;
+        overflow: hidden;
+        margin-top: 40px;
 
-/* * {
-    outline: 1px solid black
-} */
+        @media (max-width: 1024px) {
+            height: 56px;
+            margin-top: 28px;
+        }
+
+        input:focus-visible {
+            outline: none;
+        }
+    }
+    
+    .selector-box {
+        width: 200px;
+
+        @media (max-width: 1024px) {
+            width: 117px;
+        }
+
+        .form-select:focus {
+            box-shadow: none !important;
+        }
+    }
+
+    .selector {
+        border-radius: 0px;
+    }
+
+    .searchBtn-box {
+        height: 64px;
+        width: 64px;
+        padding: 8px;
+        
+        @media (max-width: 1024px) {
+            height: 56px;
+            width: 56px;
+        }
+    }
+    
+    .searchBtn-box:active {
+        transform: translate(2px, 2px)
+    }
+
+    .image-box {
+        max-height: 280px;
+        margin-top: 120px;
+
+        @media (max-width: 1024px) {
+            margin-top: 40px;
+        }
+    }
+
+    h2 {
+        span {
+            width: 100%;
+        }
+
+        span:nth-child(2) {
+            margin-top: 8px;
+        }
+
+        @media (max-width: 1024px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
+}
