新增 回憶旅程 調整db.json 麵包屑元件化

--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,5 +1,5 @@
 .login-page-container {
-  background-color: var(--trip-color-primary-100);
+  /* background-color: var(--trip-color-primary-100); */
   padding: 40px;
 }
 
